[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "click2cwl"
version = "0.4.0"  
description = 'Generates CWL documents and associated parameters from a Click CLI definition'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["CWL", "click", "cli"]
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
  { name = "Michele Longobardo", email = "michele.longobardo@terradue.com" },
  { name = "Blasco Brauzzi" },
  { name = "Simone Vaccari", email = "simone.vaccari@terradue.com" },
  { name = "Farid Yusifli" },
  { name = "Francis Charette-Migneault" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click<9",
    "pyyaml"
]


[project.urls]
Documentation = "https://github.com/Terradue/click2cwl#readme"
Issues = "https://github.com/Terradue/click2cwl/issues"
Source = "https://github.com/Terradue/click2cwl"


[tool.hatch.envs.default]
skip-install = false
dependencies = [
    "click<9",
    "pyyaml"
]

[tool.hatch.envs.prod]
path = "/app/envs/click2cwl"

dependencies = [
"click<9",
"pyyaml"
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
  "tests"
]
